<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingVertical="@dimen/dp_16">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_transparent"
                    android:src="@drawable/ic_arrow_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.DiaryMyLife.H1.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/dp_16"
                    android:text="@string/profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/back" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/userImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_32"
                    app:srcCompat="@drawable/refreshing_beverage" />

                <com.kstudio.diarymylife.widgets.custom_edit_text.CustomEditText
                    android:id="@+id/nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    app:custom_edit_text_max_line="1"
                    app:custom_edit_text_placeholder="Nickname"
                    app:custom_edit_text_title="Nickname" />

                <com.kstudio.diarymylife.widgets.custom_edit_text.CustomEditText
                    android:id="@+id/birthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    app:custom_edit_action_custom="true"
                    app:custom_edit_text_max_line="1"
                    app:custom_edit_text_placeholder="Birth Date"
                    app:custom_edit_text_title="Birth Date" />

                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:minHeight="56dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMan"
                        style="@style/TextAppearance.DiaryMyLife.H3.Grey"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radio_button_selector"
                        android:button="@color/transparent"
                        android:text="@string/men"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_radio_selector" />

                    <RadioButton
                        android:id="@+id/radioWoman"
                        style="@style/TextAppearance.DiaryMyLife.H3.Grey"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/dp_8"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radio_button_selector"
                        android:button="@color/transparent"
                        android:text="@string/women"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_radio_selector" />

                    <RadioButton
                        android:id="@+id/radioOther"
                        style="@style/TextAppearance.DiaryMyLife.H3.Grey"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bg_radio_button_selector"
                        android:button="@color/transparent"
                        android:text="@string/other"
                        android:textAlignment="center"
                        android:textColor="@drawable/text_radio_selector" />
                </RadioGroup>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSave"
            style="@style/Button.Space.Long"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_32"
            android:drawableStart="@drawable/save"
            android:drawablePadding="@dimen/dp_16"
            android:enabled="false"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
