<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="86dp"
                android:paddingHorizontal="@dimen/dp_16"
                android:paddingVertical="@dimen/dp_16">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round_transparent"
                    android:src="@drawable/ic_arrow_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.DiaryMyLife.H1.Black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/dp_16"
                    android:text="@string/create_mood"
                    app:layout_constraintBottom_toBottomOf="@+id/back"
                    app:layout_constraintStart_toEndOf="@+id/back"
                    app:layout_constraintTop_toTopOf="@+id/back" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/how_you_feel"
                    style="@style/TextAppearance.DiaryMyLife.Subtitle.Grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_32"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:text="Hello Nine. How are you feeling?" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/current_select_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    app:chipBackgroundColor="@color/secondary_grey10"
                    app:chipIcon="@drawable/ic_chevron_down"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/how_you_feel" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/view_pager_mood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp_32"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/current_select_time" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dots_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_32"
                    app:dotsColor="@color/secondary_grey20"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="16dp"
                    app:dotsSpacing="4dp"
                    app:dotsWidthFactor="2.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_pager_mood"
                    app:progressMode="false"
                    app:selectedDotColor="@color/dark_brown" />

                <com.kstudio.diarymylife.widgets.custom_edit_text.CustomEditText
                    android:id="@+id/moodTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    app:custom_edit_text_placeholder="Mood title"
                    app:custom_edit_text_title="Mood title"
                    app:layout_constraintTop_toBottomOf="@+id/dots_indicator" />

                <com.kstudio.diarymylife.widgets.custom_edit_text.CustomEditText
                    android:id="@+id/moodDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_24"
                    app:custom_edit_text_placeholder="@string/mood_detail_text_field"
                    app:custom_edit_text_title="@string/mood_detail_text_field"
                    app:layout_constraintTop_toBottomOf="@+id/moodTitle" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/selectedImage"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:background="@drawable/bg_round_card_action"
                    app:layout_constraintTop_toBottomOf="@+id/moodDesc"
                    tools:layout_editor_absoluteX="16dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/buttonImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:src="@drawable/ic_image_64"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextAppearance.DiaryMyLife.H3.Grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image"
                        app:layout_constraintEnd_toEndOf="@+id/buttonImage"
                        app:layout_constraintStart_toStartOf="@+id/buttonImage"
                        app:layout_constraintTop_toBottomOf="@+id/buttonImage" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="160dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:adjustViewBounds="false"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/moodDesc"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize20">

                </com.google.android.material.imageview.ShapeableImageView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_next"
            style="@style/Button.Space.Long"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_32"
            android:drawableStart="@drawable/save"
            android:drawablePadding="@dimen/dp_16"
            android:text="@string/save"
            android:enabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
