<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/sectionHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title"
                        style="@style/TextAppearance.DiaryMyLife.H1.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/dp_32"
                        android:text="@string/lists"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.kstudio.diarymylife.widgets.CustomCard
                        android:id="@+id/card_average"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_32"
                        app:custom_card_background_color="10"
                        app:layout_constraintEnd_toStartOf="@+id/card_total"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/title" />

                    <com.kstudio.diarymylife.widgets.CustomCard
                        android:id="@+id/card_total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_16"
                        app:custom_card_background_color="11"
                        app:layout_constraintBottom_toBottomOf="@+id/card_average"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/card_average"
                        app:layout_constraintTop_toTopOf="@+id/card_average" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/chartSection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="100dp"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@drawable/bg_round_card_action"
                        android:backgroundTint="#F9F9F9"
                        android:padding="@dimen/dp_16"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@+id/card_total"
                        tools:visibility="visible">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/headerMoodStats"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/icon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:background="@drawable/bg_icon_white"
                                android:src="@drawable/ic_bar_chart"
                                tools:src="@drawable/ic_bar_chart" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/appCompatTextView"
                                style="@style/TextAppearance.DiaryMyLife.H3.Black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/dp_8"
                                android:text="@string/mood_stats"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <com.kstudio.diarymylife.widgets.custom_chart.CustomChart
                            android:id="@+id/chart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            app:custom_bar_can_be_click="true"
                            app:custom_bar_height="170dp"
                            app:custom_bar_radius="10dp"
                            app:custom_bar_title_color="@color/brown_text"
                            app:custom_bar_title_margin_top="9dp"
                            app:custom_bar_title_selected_color="@color/amber_600"
                            app:custom_bar_title_txt_size="12sp"
                            app:custom_bar_width="@dimen/dp_16"
                            app:custom_empty_color="@color/mood_very_pool"
                            app:custom_max_value="10"
                            app:custom_pin_background_color="@color/secondary_grey100"
                            app:custom_pin_drawable="@drawable/bg_chip_action"
                            app:custom_pin_margin_bottom="55dp"
                            app:custom_pin_margin_end="22dp"
                            app:custom_pin_margin_top="10dp"
                            app:custom_pin_padding_bottom="5dp"
                            app:custom_pin_text_color="@color/pewter_blue"
                            app:custom_pin_txt_size="17sp"
                            app:custom_progress_click_color="@color/red_200"
                            app:custom_progress_color="@color/mood_pool_drop"
                            app:custom_progress_disable_color="@color/mood_pool_drop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/headerMoodStats" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title_recent_memory"
                        style="@style/TextAppearance.DiaryMyLife.H2.Black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        android:text="@string/all_moods"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/chartSection" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/buttonSort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_round_transparent"
                        android:src="@drawable/ic_sliders"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/title_recent_memory" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sectionHeader"
                    app:layout_constraintVertical_bias="0.0"
                    tools:itemCount="1"
                    tools:layout_editor_absoluteX="17dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
